# visualization_engine

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
glsl src/shaders/: shader.frag  shader.vert
src/: implementations.cpp  main.cpp  main_app.cpp  main_app.hpp  vulkan_renderer_buffers.cpp  vulkan_renderer_commands.cpp  vulkan_renderer_descriptors.cpp  vulkan_renderer_geometry.cpp  vulkan_renderer_pipeline.cpp  vulkan_renderer_setup.cpp  vulkan_renderer_swapchain.cpp  window_creator.cpp  window_creator.hpp
src/geometry/: mesh.cpp  mesh.hpp  transform.hpp
src/ipc/: shared_geometry.cpp  shared_geometry.hpp
src/shaders/: shader.frag  shader.vert
src/vulkan/: vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_renderer_buffers.cpp  vulkan_renderer_commands.cpp  vulkan_renderer_descriptors.cpp  vulkan_renderer_geometry.cpp  vulkan_renderer_pipeline.cpp  vulkan_renderer_setup.cpp  vulkan_renderer_swapchain.cpp
src/window/: window_creator.cpp  window_creator.hpp
tools/: geometry_writer.cpp
